# Simplex-method-calc

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Application.h  SimplexMethod.h
src/: Application.cpp  SimplexMethod.cpp
tests/: CMakeLists.txt  test.cpp
